fixing nav bar with z-index: 2

--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -1,5 +1,5 @@
 .navBar {
-    z-index: 2;
+    z-index: 1;
     position: fixed;
     display: flex;
     justify-content: space-around;
